--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8891,6 +8891,42 @@
         "th":"",
         "id":""
     },
+    "item.41016.name":{
+        "en":"Skill Gem",
+        "fr":"Gemme de compétence",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41017.name":{
+        "en":"Powefull Skill Gem",
+        "fr":"Gemme de compétence puissante",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "craft.levels.primary":{
         "en":"Primary",
         "fr":"Débutant",
