--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8902,7 +8902,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8910,7 +8910,7 @@
         "id":""
     },
     "item.41017.name":{
-        "en":"Powefull Skill Gem",
+        "en":"Powerful Skill Gem",
         "fr":"Gemme de compétence puissante",
         "es":"",
         "ch":"",
@@ -8920,7 +8920,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Kỹ Năng Quyền Lực",
         "ar":"",
         "it":"",
         "pl":"",
