--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8910,8 +8910,8 @@
         "id":""
     },
     "item.41017.name":{
-        "en":"Powerful Skill Gem",
-        "fr":"Gemme de compétence puissante",
+        "en":"Advanced Skill Gem",
+        "fr":"Gemme de compétence avancée",
         "es":"",
         "ch":"",
         "kr":"",
