--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8920,7 +8920,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Kỹ Năng Quyền Lực",
+        "vi":"Ngọc Kỹ Năng Tân Tiến",
         "ar":"",
         "it":"",
         "pl":"",
