--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2177,6 +2177,78 @@
         "th":"",
         "id":"Keterampilan Bakat"
     },
+    "UI.windows.skills.btn.buyPoints":{
+        "en":"Buy Points",
+        "fr":"Acheter Pts",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.btn.upgrade":{
+        "en":"Upgrade",
+        "fr":"Améliorer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.buyPoints.pointLeft":{
+        "en":"{0} Points left to level up your skill",
+        "fr":"{0} Points restant avant de monter votre compétence de niveau",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.skills.buyPoints.pointCost":{
+        "en":"Each point cost {0} Black Magic point",
+        "fr":"Chaque point coûte {0} points de magie noire",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.config.title":{
         "en":"Configs",
         "fr":"Paramètres",
