--- a/Translation/general.json
+++ b/Translation/general.json
@@ -952,5 +952,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.maximum.short":{
+        "en":"Max",
+        "fr":"Max",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
