--- a/Translation/general.json
+++ b/Translation/general.json
@@ -970,5 +970,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.nextLevel":{
+        "en":"Next Level",
+        "fr":"Niveau Suivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
