--- a/Translation/general.json
+++ b/Translation/general.json
@@ -964,7 +964,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tối Đa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -982,7 +982,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp Tiếp Theo",
         "ar":"",
         "it":"",
         "pl":"",
