--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -982,7 +982,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tìm",
         "ar":"",
         "it":"",
         "pl":"",
