--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3005,6 +3005,60 @@
         "th":"",
         "id":""
     },
+    "item.3055.name":{
+        "en":"[Spirit Egg] Poacher",
+        "fr":"[Oeuf d'esprit] Braconnier",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Kẻ Săn Trộm",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3056.name":{
+        "en":"[Spirit Egg] Desert Raider",
+        "fr":"[Oeuf d'esprit] Corsaire du Désert",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Cướp Xa Mạc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3057.name":{
+        "en":"[Spirit Egg] Rampaging Treasure Seeker",
+        "fr":"[Oeuf d'esprit] Chercheur de Trésor Rempant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Kẻ Săn Báu Điên Cuồng",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3058.name":{
         "en":"[Spirit Egg] Redback Beatle",
         "fr":"[Oeuf d'esprit] Coléoptère dorouge",
@@ -3017,6 +3071,42 @@
         "jp":"",
         "pt":"",
         "vi":"[Linh Trứng] Cánh Cứng Lưng Đỏ",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3059.name":{
+        "en":"[Spirit Egg] Prum Bear",
+        "fr":"[Oeuf d'esprit] Ours Prum",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3060.name":{
+        "en":"[Spirit Egg] Merlin",
+        "fr":"[Oeuf d'esprit] Merlin",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3635,60 +3725,6 @@
         "th":"",
         "id":""
     },
-    "item.3055.name":{
-        "en":"[Spirit Egg] Poacher",
-        "fr":"[Oeuf d'esprit] Braconnier",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"[Linh Trứng] Kẻ Săn Trộm",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "item.3056.name":{
-        "en":"[Spirit Egg] Desert Raider",
-        "fr":"[Oeuf d'esprit] Corsaire du Désert",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"[Linh Trứng] Cướp Xa Mạc",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "item.3057.name":{
-        "en":"[Spirit Egg] Rampaging Treasure Seeker",
-        "fr":"[Oeuf d'esprit] Chercheur de Trésor Rempant",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"[Linh Trứng] Kẻ Săn Báu Điên Cuồng",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"[Oeuf d'esprit] Slime Pudding",
@@ -4067,6 +4103,60 @@
         "th":"",
         "id":""
     },
+    "item.4055.name":{
+        "en":"Poacher",
+        "fr":"Braconnier",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Kẻ Săn Trộm",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4056.name":{
+        "en":"Desert Raider",
+        "fr":"Corsaire du Désert",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cướp Xa Mạc",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4057.name":{
+        "en":"Rampaging Treasure Seeker",
+        "fr":"Chercheur de Trésor Rempant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Kẻ Săn Báu Điên Cuồng",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4058.name":{
         "en":"Redback Beatle",
         "fr":"Coléoptère dorouge",
@@ -4079,6 +4169,42 @@
         "jp":"",
         "pt":"",
         "vi":"Cánh Cứng Lưng Đỏ",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4059.name":{
+        "en":"Prum Bear",
+        "fr":"Ours Prum",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4060.name":{
+        "en":"Merlin",
+        "fr":"Merlin",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4691,60 +4817,6 @@
         "jp":"",
         "pt":"",
         "vi":"Golem Nóng Chảy",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "item.4055.name":{
-        "en":"Poacher",
-        "fr":"Braconnier",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Kẻ Săn Trộm",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "item.4056.name":{
-        "en":"Desert Raider",
-        "fr":"Corsaire du Désert",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Cướp Xa Mạc",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "item.4057.name":{
-        "en":"Rampaging Treasure Seeker",
-        "fr":"Chercheur de Trésor Rempant",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Kẻ Săn Báu Điên Cuồng",
         "ar":"",
         "it":"",
         "pl":"",
