--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3078,8 +3078,8 @@
         "id":""
     },
     "item.3059.name":{
-        "en":"[Spirit Egg] Prum Bear",
-        "fr":"[Oeuf d'esprit] Ours Prum",
+        "en":"[Spirit Egg] Padilla Bear",
+        "fr":"[Oeuf d'esprit] Ours Padilla",
         "es":"",
         "ch":"",
         "kr":"",
