--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4176,8 +4176,8 @@
         "id":""
     },
     "item.4059.name":{
-        "en":"Prum Bear",
-        "fr":"Ours Prum",
+        "en":"Padilla Bear",
+        "fr":"Ours Padilla",
         "es":"",
         "ch":"",
         "kr":"",
