--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3024,8 +3024,8 @@
         "id":""
     },
     "item.3056.name":{
-        "en":"[Spirit Egg] Desert Raider",
-        "fr":"[Oeuf d'esprit] Corsaire du Désert",
+        "en":"[Spirit Egg] Bandit",
+        "fr":"[Oeuf d'esprit] Bandit",
         "es":"",
         "ch":"",
         "kr":"",
@@ -3034,7 +3034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Cướp Xa Mạc",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3413,6 +3413,24 @@
         "jp":"",
         "pt":"",
         "vi":"[Linh Trứng] Xác Ướp Cháy",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3061.name":{
+        "en":"[Spirit Egg] Desert Raider",
+        "fr":"[Oeuf d'esprit] Corsaire du Désert",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Cướp Xa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4122,8 +4140,8 @@
         "id":""
     },
     "item.4056.name":{
-        "en":"Desert Raider",
-        "fr":"Corsaire du Désert",
+        "en":"Bandit",
+        "fr":"Bandit",
         "es":"",
         "ch":"",
         "kr":"",
@@ -4132,7 +4150,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cướp Xa Mạc",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4511,6 +4529,24 @@
         "jp":"",
         "pt":"",
         "vi":"Xác Ướp Cháy",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4061.name":{
+        "en":"Desert Raider",
+        "fr":"Corsaire du Désert",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cướp Xa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
