--- a/Translation/item.json
+++ b/Translation/item.json
@@ -1954,7 +1954,7 @@
         "de":"Stiefel der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Giày Tái Sinh",
+        "vi":"Giày Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2350,7 +2350,7 @@
         "de":"Cape der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Tái Sinh",
+        "vi":"Áo Choàng Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2548,7 +2548,7 @@
         "de":"Hüllen der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Găng Tay Tái Sinh",
+        "vi":"Găng Tay Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3034,7 +3034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Thổ Phỉ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3088,7 +3088,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Gấu Padilla",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3106,7 +3106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Merlin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8200,7 +8200,7 @@
         "de":"Fähigkeitsbuch [Energie]",
         "jp":"",
         "pt":"",
-        "vi":"Sách Kỹ Năng [Năng lượng Ma Pháp]",
+        "vi":"Sách Kỹ Năng [Năng Nguyên]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8236,7 +8236,7 @@
         "de":"Fähigkeitsbuch [Erwachen]",
         "jp":"",
         "pt":"",
-        "vi":"Sách Kỹ Năng [Thức tỉnh]",
+        "vi":"Sách Kỹ Năng [Thức Tỉnh]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8290,7 +8290,7 @@
         "de":"Fähigkeitsbuch [Einfrieren]",
         "jp":"",
         "pt":"",
-        "vi":"Sách Kỹ Năng [Đóng băng]",
+        "vi":"Sách Kỹ Năng [Đóng Băng]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8326,7 +8326,7 @@
         "de":"Fähigkeitsbuch [Magisches Schild]",
         "jp":"",
         "pt":"",
-        "vi":"Sách Kỹ Năng [Khiên ma thuật]",
+        "vi":"Sách Kỹ Năng [Khiên Ma Pháp]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8344,7 +8344,7 @@
         "de":"Fähigkeitsbuch [Stille]",
         "jp":"",
         "pt":"",
-        "vi":"Sách Kỹ Năng [Câm lặng]",
+        "vi":"Sách Kỹ Năng [Trầm Lặng Chú]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8470,7 +8470,7 @@
         "de":"Margaretta Sandwich",
         "jp":"",
         "pt":"",
-        "vi":"Bánh sandwich Margaretta",
+        "vi":"Bánh Sandwich Margaretta",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8488,7 +8488,7 @@
         "de":"Schweinezungen-Interpret ",
         "jp":"",
         "pt":"",
-        "vi":"Thông Dịch Tiếng Lợn",
+        "vi":"Thông Dịch Trư Ngữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8578,7 +8578,7 @@
         "de":"Ominöser Brief",
         "jp":"",
         "pt":"",
-        "vi":"Thư đáng ngờ",
+        "vi":"Thư Đáng Ngờ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8668,7 +8668,7 @@
         "de":"Erdbeere",
         "jp":"",
         "pt":"",
-        "vi":"Dâu",
+        "vi":"Dâu Tây",
         "ar":"",
         "it":"",
         "pl":"",
