--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4895,6 +4895,78 @@
         "th":"",
         "id":""
     },
+    "item.5002.name":{
+        "en":"Fire Chain Mail M",
+        "fr":"Cotte de Mailles de Feu H",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5003.name":{
+        "en":"Gold Chain Mail M",
+        "fr":"Cotte de Mailles d'Or H",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5004.name":{
+        "en":"Fire Chain Mail F",
+        "fr":"Cotte de Mailles de Feu F",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5005.name":{
+        "en":"Gold Chain Mail F",
+        "fr":"Cotte de Mailles d'Or F",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name": {
 		"en": "Initlal Hairstyle (Green)",
 		"fr": "Coiffure Initiale (Vert)",
