--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2890,7 +2890,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Gà Trống Đuôi Rắn",
+        "vi":"[Linh Trứng] Xà Vĩ Công Kê",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3520,7 +3520,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Nham Golem",
+        "vi":"[Linh Trứng] Nham Ma Tượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3556,7 +3556,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Chiến Binh Balrog",
+        "vi":"[Linh Trứng] Diễm Ma Chiến Binh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3574,7 +3574,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Đội Trưởng Tiên Phong Evrat",
+        "vi":"[Linh Trứng] Đội Trưởng Tiên Phong Xứ Evrat",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3646,7 +3646,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Manticore",
+        "vi":"[Linh Trứng] Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3664,7 +3664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Đội Trưởng Hook",
+        "vi":"[Linh Trứng] Móc Thuyền Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3682,7 +3682,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Manticore Đuôi Mướt",
+        "vi":"[Linh Trứng] Điềm Vĩ Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3700,7 +3700,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Con Của Rồng Lửa",
+        "vi":"[Linh Trứng] Nhi Thú Hỏa Long",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3718,7 +3718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Manticore Đuôi Mắt",
+        "vi":"[Linh Trứng] Nhãn Vĩ Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3736,7 +3736,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Golem Nóng Chảy",
+        "vi":"[Linh Trứng] Dung Hóa Ma Tượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4006,7 +4006,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Gà Trống Đuôi Rắn",
+        "vi":"Xà Vĩ Công Kê",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4150,7 +4150,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thổ Phỉ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4204,7 +4204,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gấu Padilla",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4222,7 +4222,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Merlin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4636,7 +4636,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nham Golem",
+        "vi":"Nham Ma Tượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4672,7 +4672,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chiến Binh Balrog",
+        "vi":"Diễm Ma Chiến Binh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4690,7 +4690,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đội Trưởng Tiên Phong Evrat",
+        "vi":"Đội Trưởng Tiên Phong Xứ Evrat",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4762,7 +4762,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Manticore",
+        "vi":"Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4780,7 +4780,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đội Trưởng Hook",
+        "vi":"Móc Thuyền Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4798,7 +4798,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Manticore Đuôi Mướt",
+        "vi":"Điềm Vĩ Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4816,7 +4816,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Con Của Rồng Lửa",
+        "vi":"Nhi Thú Hỏa Long",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4834,7 +4834,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Manticore Đuôi Mắt",
+        "vi":"Nhãn Vĩ Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4852,7 +4852,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Golem Nóng Chảy",
+        "vi":"Dung Hóa Ma Tượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4870,7 +4870,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giáp Xích M",
+        "vi":"Giáp Xích Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4888,7 +4888,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giáp Xích F",
+        "vi":"Giáp Xích Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4905,7 +4905,7 @@
         "tr":"",
         "de":"",
         "jp":"",
-        "pt":"",
+        "pt":"Hỏa Nung Giáp Xích Nam",
         "vi":"",
         "ar":"",
         "it":"",
@@ -4924,7 +4924,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàng Kim Giáp Xích Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4942,7 +4942,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hỏa Nung Giáp Xích Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4960,7 +4960,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoàng Kim Giáp Xích Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7408,7 +7408,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngòi Manticore",
+        "vi":"Ngòi Yết Sư",
         "ar":"",
         "it":"",
         "pl":"",
