--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -118,7 +118,7 @@
         "de":"Energie",
         "jp":"",
         "pt":"",
-        "vi":"Năng lượng Ma Pháp",
+        "vi":"Năng Nguyên",
         "ar":"",
         "it":"",
         "pl":"",
